--- a/01 inspiration/code/WrightBrothersApi.Tests/WrightBrothersApi.Tests.csproj
+++ b/01 inspiration/code/WrightBrothersApi.Tests/WrightBrothersApi.Tests.csproj
@@ -13,7 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
+    <PackageReference Include="FluentAssertions" Version="7.2.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
