--- a/02 deepdive/.markdownlint-cli2.jsonc
+++ b/02 deepdive/.markdownlint-cli2.jsonc
@@ -2,12 +2,12 @@
     // markdownlint-cli2 configuration
     "config": {
         "default": true,
-        // Allow longer lines for documentation
-        "MD013": {
-            "line_length": 120,
-            "code_blocks": false,
-            "tables": false
-        }
+        // Disable line length (was previously set to 120, but .markdownlint.json had it disabled)
+        "MD013": false,
+        // Disable inline HTML
+        "MD033": false,
+        // Disable first line heading requirement
+        "MD041": false
     },
     "gitignore": true,
     "globs": [
